** 0.1.0 released on 2005-12-31

2005-12-31  Piotr Fusik  <fox@scene.pl>
* NEWS, README, asap2wav.1, win32/README, win32/winamp/README: created

* configure.ac: link with "-lm" if necessary

* CREDITS, INSTALL, TODO, win32/wasap.c: slight fixes

* win32/Makefile: updated the "dist" target

* win32/.cvsignore: ignore asap2wav.txt


2005-12-30  Piotr Fusik  <fox@scene.pl>
* CREDITS, INSTALL: created

* atari800/src/cpu.c, atari800/src/cpu.h, atari800/src/mzpokeysnd.c,
  atari800/src/pokey.h, atari800/src/pokeysnd.c, atari800/src/remez.c:
  committed changes required for ASAP to the Atari800 CVS


2005-12-28  Piotr Fusik  <fox@scene.pl>
* rmt_0390.raw, asap.c, asap.h, asap2wav.c, Makefile.in, win32/wasap.c,
  win32/Makefile, win32/winamp/in_asap.c: support RMT mono songs


2005-12-27  Piotr Fusik  <fox@scene.pl>
* ChangeLog, TODO: created

* .cvsignore: ignore autoconf-generated files

* win32/wasap.c, win32/wasap.rc: use radio-marks instead of check-marks,
  this even simplifies the code

* asap.c: fixed an endless loop when a file other than SAP was loaded first;
  made initialization of poly{9,17}_lookup several times faster;
  implemented subsongs in MPT and TMC files; removed the unused DivN* arrays;
  ASAP_PlaySong() first clears POKEY sound registers - this helps SAPs which
  don't do that

* maketar.pl, win32/Makefile: "nmake dist" creates release archives

* asap.c, asap2wav.c, win32/wasap.c, win32/winamp/in_asap.c:
  support DMC (DoublePlay CMC) and MPD (MPT DoublePlay) formats

* win32/wasap.c: added file selector filters


2005-12-23  Piotr Fusik  <fox@scene.pl>
* Makefile.in, config.guess, config.sub, install-sh: uploaded the latest
  run-time config/install scripts


2005-12-21  Piotr Fusik  <fox@scene.pl>
* .cvsignore, win32/.cvsignore, win32/winamp/.cvsignore: specified files
  that are not stored in CVS

* win32/Makefile: added icon dependencies

* win32/wasap.ico: colored the 16x16 application icon


2005-12-20  Piotr Fusik  <fox@scene.pl>