@@ -1,3 +1,7 @@
+2006-01-04  Piotr Fusik  <fox@scene.pl>
+* xmms/libasap.c, Makefile.in: added XMMS plugin
+
+
 ** 0.1.0 released on 2005-12-31
 
 2005-12-31  Piotr Fusik  <fox@scene.pl>
